# tibcalendar

./: .gitignore  .indent.pro  AUTHORS  CMakeLists.txt  COPYING  README  README.md  config.h.in
5-planets/: bcd.ext  jd.h  notes.txt  satu87.c  venu87.c
cli/: CMakeLists.txt  printcalendar.c  printcalendar.h  tibastro.c  tibastro.h  translation.c  translation.h  ui.c  ui.h
cli/tests/: tests-astrology.c  tests-jd.c  tests-jd.h  tests-tbday.c  tests-tbday.h  tests.h
cmake/: FindGettext.cmake  FindPotupdate.cmake  FindTranslationTools.cmake
docs/: Bibliography.txt  Standards.txt  TODO
libtastro/: CMakeLists.txt  astrology.c  astrology.h  jd.c  jd.h  system-priv.h  system.c  system.h  tbcal.c  tbcal.h  tbday.c  tbday.h  tbmath.c  tbmath.h  tbmonth.c  tbmonth.h  tbplanets.c  tbplanets.h  tbstructures.c  tbstructures.h  utils.c  utils.h
libtastro/modern/: astronomy.c  cmpb.c  compute-vsop.py  cper.c  earthc.c  earthd.c  eclipse.c  fmpb.c  modmonth.c  modmonth.h  pmoon.c  pmoonnd.c  pmoonpg.c  sunmon.c  sunmon.h  time.c  vsop.h  vsop87-d-earth.c
libtastro/modern-kalacakra/planets/: Makefile  bcd.c  earth87.c  jd.c  jupi87.c  mars87.c  merc87.c  setwc.bat  tests.c  vsop.c
libtastro/modern/docs/: ATP.pdf_tex  calendricalscales.tex  computerscales.tex  ephemerismethods.tex  eroux.sty  introduction.tex  observerposition.tex  precision.bib  precision.tex  timescales.tex
libtastro/phugpa/: CMakeLists.txt  bcd.c  t3.c  tc.def  tc_pcalc.c  tcn.c  ui.h  utils.c
po/: CMakeLists.txt  POTFILES.in  fr_FR.po
tcn/: Makefile  bcd.h  tc.ext  tcn.h  utils.c
