add_library(
	libtastro
	jd.c
	jd.h
	tbday.c
	tbday.h
	tbmonth.c
	tbmonth.h
	tbmath.c
	tbmath.h
	tbplanets.c
	tbplanets.h
	astrology.c
	astrology.h
	system.c
	system.h
	system-priv.h
	tbstructures.c
	tbstructures.h
	modern/modmonth.c
	modern/modmonth.h
	modern/sunmon.c
	modern/sunmon.h
	modern/cmpb.c
	modern/cper.c
	modern/earthc.c
	modern/earthd.c
	modern/fmpb.c
	modern/fper.c
	modern/pmoon.c
	modern/pmoonnd.c
	modern/pmoonpg.c
	)
